Console version done, GUI - wip